# fastmail-cli

./: README.md  fastmail_jmap.py  pyproject.toml
.kimi/: BRIEF.md
src/fastmail_cli/: __init__.py  __main__.py  cli.py  client.py  exceptions.py
tests/: test_cli.py
