[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmail-cli"
version = "0.1.0"
description = "A CLI tool for managing Fastmail emails via JMAP API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "User"}
]
keywords = ["fastmail", "email", "jmap", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
fastmail-cli = "fastmail_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/user/fastmail-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmail_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]
